# PyMesh

python/: CMakeLists.txt  PyLattice2D.cpp  PyLattice2DFactory.cpp  PyLatticeAlgorithms.cpp  PySkeletonExtraction.cpp  module.cpp
python/pymesh/: Lattice2D.py  __init__.py  create_lattice2d.py  lattice_algorithms.py  lattice_creator.py  skeleton.py
scripts/: lattice.py  lattice_segmentation.py  skeleton.py
src/: Lattice2D.cpp  Lattice2D.h  Lattice2DFactory.cpp  Lattice2DFactory.h
tools/: CMakeLists.txt
tools/LatticeAlgorithms/: CMakeLists.txt  SegmentDetection.cpp  SegmentDetection.h  TopologicalOrder.cpp  TopologicalOrder.h
tools/OuterHull/: OuterHullEngine.cpp
tools/SkeletonExtraction/: ExtractSkeleton2D.cpp  ExtractSkeleton2D.h  SkeletonEngine.cpp  SkeletonEngine.h
tools/SkeletonExtraction/CGAL/: ConvexHull2D.cpp  ConvexHull2D.h  CreateSkeleton2.cpp  CreateSkeleton2.h  Skeleton2D.cpp  Skeleton2D.h  ValidatePolygon2D.cpp  ValidatePolygon2D.h
